# sparsely

./: README.md  all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  requirements.txt  searchindex.json  sparsely.base.BaseSparseEstimator.html  sparsely.base.html  sparsely.classifier.SparseLinearClassifier.html  sparsely.classifier.html  sparsely.html  sparsely.regressor.SparseLinearRegressor.html  sparsely.regressor.html  sparsely.tune.html  undoccedSummary.html
.github/workflows/: docs.yml
src/sparsely/: __init__.py  base.py  classifier.py  regressor.py  sparse_linear_regressor.py  tune.py  utils.py
src/tests/: conftest.py  test_sparse_linear_regressor.py  test_tune.py
tests/: conftest.py  test_classifier.py  test_regressor.py  test_tune.py
