[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparsely"
version = "0.0.1"
authors = [
  { name="Joshua Ivanhoe", email="joshua.k.ivanhoe@gmail.com" },
]
description = "Scalable sparse linear regression"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn>=1.3.2",
    "pre-commit>=3.6.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "tomli>=2.0.1",
    "tqdm>=4.66.1"
]

[project.urls]
Homepage = "https://github.com/joshivanhoe/sparsely"
Issues = "https://github.com/joshivanhoe/sparsely/issues"
